# TXGLabs

./: .gitignore  README.md  meson.build
LiteUtils/: Application.py  meson.build
LwUtils/: Application.py  meson.build
TXGLabs/: Application.py  meson.build
data/: com.txg0fk3.LiteUtils.desktop.in  com.txg0fk3.LiteUtils.gschema.xml  com.txg0fk3.LiteUtils.metainfo.xml.in  com.txg0fk3.TXGLabs.desktop.in  com.txg0fk3.TXGLabs.gschema.xml  com.txg0fk3.TXGLabs.metainfo.xml.in  corp.lwtech.LwUtils.desktop.in  corp.lwtech.LwUtils.gschema.xml  corp.lwtech.LwUtils.metainfo.xml.in  liteutils.gresource.xml  lwutils.gresource.xml  meson.build  txglabs.gresource.xml
data/icons/: meson.build
data/ui/: about_window.blp  main_window.blp  shortcuts_overview.blp
po/: LINGUAS  POTFILES.in  liteutils.pot  lwutils.pot  pt_BR.po  txglabs.pot  update_potfiles.sh
